--- a/src/templates/ez_datetime_time_picker.html
+++ b/src/templates/ez_datetime_time_picker.html
@@ -4,8 +4,8 @@
       <i class="glyphicon glyphicon-time"></i>
     </td>
     <td>
-      <div class="dropdown">
-        <a class="btn btn-default dropdown-toggle">
+      <div class="dropdown" dropdown>
+        <a class="btn btn-default dropdown-toggle" dropdown-toggle>
           {{ ngModel | ezDate:options.hourFormat }}
         </a>
         <ul class="dropdown-menu dropdown-pointer">
@@ -15,8 +15,8 @@
     </td>
     <td>:</td>
     <td>
-      <div class="dropdown">
-        <a class="btn btn-default dropdown-toggle">
+      <div class="dropdown" dropdown>
+        <a class="btn btn-default dropdown-toggle" dropdown-toggle>
           {{ ngModel | ezDate:options.minuteFormat }}
         </a>
         <ul class="dropdown-menu dropdown-pointer">
@@ -28,8 +28,8 @@
     </td>
     <td ng-if="options.secondsEnabled">:</td>
     <td ng-if="options.secondsEnabled">
-      <div class="dropdown">
-        <a class="btn btn-default dropdown-toggle">
+      <div class="dropdown" dropdown>
+        <a class="btn btn-default dropdown-toggle" dropdown-toggle>
           {{ ngModel | ezDate:options.secondFormat }}
         </a>
         <ul class="dropdown-menu dropdown-pointer">
